--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -538,7 +538,7 @@ h6,
 }
 #ext_menu-x .link[aria-expanded="true"],
 #ext_menu-x .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
+  color: #7c706b!important;
 }
 #msg-box8-3 .mbr-section-title,
 #msg-box8-3 p {
