--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -843,3 +843,6 @@ h6,
 #ext_menu-x .dropdown-item[aria-expanded="true"] {
   color: #7c706b!important;
 }
+#content1-1h P {
+  text-align: center;
+}
