--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -616,6 +616,29 @@ h6,
 #msg-box8-n p {
   color: #fff;
 }
+#pricing-table2-1q .mbr-plan-header,
+#pricing-table2-1q .mbr-plan-body {
+  background-color: #f4f4f4;
+}
+#pricing-table2-1q ul,
+#pricing-table2-1q .mbr-plan-title,
+#pricing-table2-1q .mbr-price-value,
+#pricing-table2-1q .mbr-price-figure,
+#pricing-table2-1q .mbr-price-term {
+  color: #28262b;
+}
+#pricing-table2-1q .mbr-plan {
+  border-color: #e8e8e8;
+}
+#pricing-table2-1q .mbr-plan .list-group-item {
+  border-color: #cfcfcf;
+}
+#pricing-table2-1q UL {
+  text-align: left;
+}
+#pricing-table2-1q .mbr-plan-title {
+  font-size: 14px;
+}
 #features4-k .card-subtitle {
   color: #bcbcbc;
 }
@@ -693,80 +716,6 @@ h6,
 }
 #form1-1c .form-control-label {
   color: #232323;
-}
-#ext_menu-s .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-s .navbar-caption {
-  color: #ffffff;
-}
-#ext_menu-s .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-s .close-icon::before,
-#ext_menu-s .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-s .link,
-#ext_menu-s .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-s .link {
-  font-size: 1.05rem;
-}
-#ext_menu-s .dropdown-item,
-#ext_menu-s .nav-dropdown-sm .link {
-  font-size: 1.137rem;
-}
-#ext_menu-s .link:hover,
-#ext_menu-s .dropdown-item:hover,
-#ext_menu-s .link:focus,
-#ext_menu-s .dropdown-item:focus {
-  color: #7c706b;
-}
-#ext_menu-s .link[aria-expanded="true"],
-#ext_menu-s .dropdown-menu {
-  background: #0e0e0e;
-}
-#ext_menu-s .nav-dropdown-sm .link:focus,
-#ext_menu-s .nav-dropdown-sm .link:hover,
-#ext_menu-s .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-s .nav-dropdown-sm .dropdown-item:hover {
-  background: #202020!important;
-}
-#ext_menu-s .navbar,
-#ext_menu-s .nav-dropdown-sm,
-#ext_menu-s .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-s .nav-dropdown-sm .dropdown-menu {
-  background: #282828;
-}
-#ext_menu-s .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-s .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-s .bg-color.transparent.opened .link:hover,
-#ext_menu-s .bg-color.transparent.opened .link:focus {
-  color: #7c706b;
-}
-#ext_menu-s .link[aria-expanded="true"],
-#ext_menu-s .dropdown-item[aria-expanded="true"] {
-  color: #7c706b!important;
-}
-#msg-box8-u .mbr-section-title,
-#msg-box8-u p {
-  color: #fff;
-}
-#content1-v P {
-  text-align: center;
-}
-#form2-w .mbr-section-title {
-  color: #fff;
-}
-#form2-w .mbr-section-subtitle {
-  color: #a0a0a0;
 }
 #msg-box8-z .mbr-section-title,
 #msg-box8-z p {
