--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -469,12 +469,6 @@ h6,
 #ext_menu-5 .dropdown-item[aria-expanded="true"] {
   color: #7c706b!important;
 }
-#header6-1n .mbr-section-title {
-  color: #000000;
-}
-#header6-1n .mbr-section-text {
-  color: #28324e;
-}
 #header3-b .mbr-section-title,
 #header3-b .mbr-section-subtitle {
   text-align: center;
@@ -848,4 +842,79 @@ h6,
 #ext_menu-1k .link[aria-expanded="true"],
 #ext_menu-1k .dropdown-item[aria-expanded="true"] {
   color: #7c706b!important;
+}
+#ext_menu-x .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-x .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-x .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-x .close-icon::before,
+#ext_menu-x .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-x .link,
+#ext_menu-x .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-x .link {
+  font-size: 1.05rem;
+}
+#ext_menu-x .dropdown-item,
+#ext_menu-x .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-x .link:hover,
+#ext_menu-x .dropdown-item:hover,
+#ext_menu-x .link:focus,
+#ext_menu-x .dropdown-item:focus {
+  color: #7c706b;
+}
+#ext_menu-x .link[aria-expanded="true"],
+#ext_menu-x .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-x .nav-dropdown-sm .link:focus,
+#ext_menu-x .nav-dropdown-sm .link:hover,
+#ext_menu-x .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-x .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-x .navbar,
+#ext_menu-x .nav-dropdown-sm,
+#ext_menu-x .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-x .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-x .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-x .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-x .bg-color.transparent.opened .link:hover,
+#ext_menu-x .bg-color.transparent.opened .link:focus {
+  color: #7c706b;
+}
+#ext_menu-x .link[aria-expanded="true"],
+#ext_menu-x .dropdown-item[aria-expanded="true"] {
+  color: #7c706b!important;
+}
+#msg-box8-3 .mbr-section-title,
+#msg-box8-3 p {
+  color: #fff;
+}
+#content1-4 H1 {
+  font-size: 36px;
+  text-align: center;
+}
+#content1-4 P {
+  font-size: 17px;
+}
+#content1-1v P {
+  text-align: center;
 }
